# modguard

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
examples/: basic_moderation.py  batch_processing.py  custom_rules.py
modguard/: __init__.py  __main__.py  config.py  models.py  pipeline.py
modguard/api/: __init__.py  routes.py  server.py  websocket.py
modguard/classifiers/: __init__.py  base.py  ensemble.py  rules.py  sentiment.py  toxicity.py
modguard/dashboard/: app.js  index.html  styles.css
modguard/demo/: __init__.py  generate_data.py  sample_content.json
tests/: __init__.py  test_api.py  test_ensemble.py  test_pipeline.py  test_rules.py
